# codex-sentinel

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json  vite.config.ts
.github/workflows/: release-build.yml
capabilities/: default.json
icons/: icon.icns
launchd/: local.codex-sentinel.plist
reports/: append-stdout.txt  rollout-019e1f5a-image-review.md  windows-final-test-report.md  windows-visible-recovery-prototype.md
reports/windows-probe-20260512-152750/: windows-probe-report.md
reports/windows-probe-20260513-100940/: windows-probe-report.md
reports/windows-probe-20260513-122224/: windows-probe-report.md
reports/windows-probe-20260513-122638/: windows-probe-report.md
reports/windows-probe-20260513-141950/: windows-probe-report.md
reports/windows-probe-20260514-172139/: windows-probe-report.md
reports/windows-probe-20260515-152734/: windows-probe-report.md
reports/windows-probe-20260515-153056/: windows-probe-report.md
reports/windows-probe-20260515-155137/: codex-uia-tree.txt  read-latest-thread.py  windows-probe-report.md
scripts/: package-macos.sh  package-windows.ps1  postprocess-macos-dmg.sh  set-app-version.mjs  windows-probe.ps1
src/: app_server_probe.rs  codex.rs  config.rs  control_queue.rs  desktop_control.rs  hooks.rs  lifecycle.rs  main.rs  maintenance.rs  recovery.rs  telegram.rs  ui.rs
src/desktop_control/: macos.rs  unsupported.rs  windows.rs
src/lifecycle/: macos.rs  unsupported.rs  windows.rs
tests/fixtures/: hook_stop_full_payload.json  hook_stop_minimal_payload.json
ui/: index.html
ui/src/: main.ts  styles.css
